manifests/09_network-policy-allow-egress-to-api-server.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
 name: allow-egress-to-api-server
 namespace: openshift-cluster-csi-drivers
 annotations:
  include.release.openshift.io/hypershift: "true"
  include.release.openshift.io/ibm-cloud-managed: "true"
  include.release.openshift.io/self-managed-high-availability: "true"
  include.release.openshift.io/single-node-developer: "true"
  capability.openshift.io/name: Storage
spec:
 podSelector:
   matchLabels:
     openshift.storage.network-policy.api-server: allow
 egress:
 - ports:
   - protocol: TCP
     port: 6443
 policyTypes:
 - Egress
